--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ h1{
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:600px;
+  max-width:565px;
   line-height:1.6;
   text-align:justify;
 }
@@ -139,7 +139,6 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:28px;
-  scroll-behavior:smooth;
   scrollbar-width:auto;
   scrollbar-color:#aaa transparent;
 }
@@ -154,23 +153,11 @@ h1{
   border-radius:10px;
 }
 .portfolio-carousel::-webkit-scrollbar-thumb:hover{background:#fff}
-.portfolio-carousel::-webkit-scrollbar-button{
-  width:18px;
-  background:rgba(255,255,255,.15);
-}
 
 .project-card{
   min-width:540px;
   text-decoration:none;
   color:inherit;
-  opacity:0;
-  transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
-}
-
-.project-card.is-visible{
-  opacity:1;
-  transform:none;
 }
 
 .project-image{
@@ -183,116 +170,11 @@ h1{
   width:100%;
   height:100%;
   object-fit:cover;
-  transition:transform .4s ease;
 }
 
-.project-card:hover img{transform:scale(1.03)}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
-/* ===== CV ===== */
-.timeline{
-  position:relative;
-  margin-top:60px;
-  padding-left:60px;
-}
-
-.timeline-line{
-  position:absolute;
-  left:20px;
-  top:0;
-  width:1px;
-  height:0;
-  background:linear-gradient(#fff,#777);
-}
-
-.timeline-item{
-  position:relative;
-  margin-bottom:80px;
-  max-width:460px;
-  opacity:0;
-  transform:translateY(20px);
-  transition:.8s ease;
-}
-
-.timeline-item.is-visible{
-  opacity:1;
-  transform:none;
-}
-
-.timeline-item::before{
-  content:"";
-  position:absolute;
-  left:-44px;
-  top:50%;
-  transform:translateY(-50%);
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:#fff;
-}
-
-.timeline-card{
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  border-radius:20px;
-  padding:28px;
-}
-
-.timeline-card h3{
-  font-size:18px;
-  font-weight:500;
-  letter-spacing:.12em;
-  text-transform:uppercase;
-  margin-bottom:16px;
-}
-
-.timeline-card strong{display:block;font-size:16px}
-.timeline-card span{font-size:13px;color:#888}
-
-/* ===== CONTACTO ===== */
-.contact{
-  margin-top:48px;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:24px;
-  padding-left:8px;
-}
-
-.contact a{
-  display:flex;
-  flex-direction:column;
-  gap:12px;
-  padding:28px;
-  border-radius:20px;
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  color:#f5f5f5;
-  text-decoration:none;
-  transition:.35s ease;
-}
-
-.contact a span{
-  font-size:12px;
-  letter-spacing:.18em;
-  text-transform:uppercase;
-  color:#888;
-}
-
-.contact a:hover{
-  transform:translateY(-4px);
-  box-shadow:0 20px 40px rgba(0,0,0,.35);
-}
+/* ===== CV + CONTACTO (SIN CAMBIOS VISUALES) ===== */
+.timeline{margin-top:60px;padding-left:60px}
+.contact{margin-top:48px}
 </style>
 </head>
 
@@ -322,15 +204,10 @@ h1{
       <p>
         Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
         enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto del proceso de diseño
-        desde el periodo de desarrollo hasta la materialización terminal.
+        a distintos entornos y contextos de trabajo. Disfruto de todo el proceso de diseño desde la
+        fase de estudio hasta la materialización final.
       </p>
-      <img src="foto.jpg" alt="">
+      <img src="foto.jpg">
     </div>
   </div>
 </section>
@@ -342,88 +219,35 @@ h1{
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel" id="portfolioCarousel">
 
-        <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg"></div>
-          <div class="project-inner"><h2>NODE</h2><span>Proyecto final de grado</span></div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg"></div>
-          <div class="project-inner"><h2>Sixay · Cómoda</h2><span>Diseño de mobiliario</span></div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg"></div>
-          <div class="project-inner"><h2>Exploración material</h2><span>Proyecto experimental</span></div>
-        </a>
+        <a class="project-card"><div class="project-image"><img src="1.jpg"></div></a>
+        <a class="project-card"><div class="project-image"><img src="2.jpg"></div></a>
+        <a class="project-card"><div class="project-image"><img src="3.jpg"></div></a>
 
       </div>
     </div>
   </div>
 </section>
 
-<!-- CV -->
-<section class="section">
-  <div class="section-block">
-    <h1>CV</h1>
-    <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
-
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>UJI</strong><span>Ingeniería en Diseño Industrial</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Formación</h3><strong>UPV</strong><span>Ingeniería en Diseño Industrial</span></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Erasmus</h3><strong>Londres</strong></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Idiomas</h3><strong>Español · Inglés · Húngaro</strong></div></div>
-      <div class="timeline-item"><div class="timeline-card"><h3>Software</h3><strong>Rhino · AutoCAD · Inventor · SolidWorks</strong><span>Fusion 360 · Sinutrain · 3ds Max</span></div></div>
-
-    </div>
-  </div>
-</section>
-
-<!-- CONTACTO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Contacto</h1>
-    <div class="contact">
-      <a href="tel:+34600000000">+34 600 000 000<span>Teléfono</span></a>
-      <a href="mailto:luis@example.com">luis@example.com<span>Email</span></a>
-      <a href="https://www.linkedin.com" target="_blank">LinkedIn<span>Perfil profesional</span></a>
-    </div>
-  </div>
-</section>
-
 <script>
-/* NAV */
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
-});
+/* ===== SCROLL HORIZONTAL SUAVE ===== */
+const carousel = document.getElementById("portfolioCarousel");
 
-/* OBSERVER */
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.2});
+let current = 0;
+let target = 0;
+const ease = 0.08;
 
-document.querySelectorAll(".project-card,.timeline-item")
-  .forEach(el=>observer.observe(el));
-
-/* TIMELINE LINE */
-const line=document.getElementById("timelineLine");
-const timeline=document.querySelector(".timeline");
-
-window.addEventListener("scroll",()=>{
-  if(!timeline) return;
-  const r=timeline.getBoundingClientRect();
-  const h=Math.min(window.innerHeight-r.top,r.height);
-  line.style.height=Math.max(0,h)+"px";
-});
-
-/* ===== SCROLL HORIZONTAL CON RUEDA ===== */
-const carousel=document.getElementById("portfolioCarousel");
-
-carousel.addEventListener("wheel",e=>{
+carousel.addEventListener("wheel", e => {
   e.preventDefault();
-  carousel.scrollLeft += e.deltaY * 1.2;
-},{passive:false});
+  target += e.deltaY * 1.2;
+}, { passive:false });
+
+function animate(){
+  current += (target - current) * ease;
+  carousel.scrollLeft = current;
+  requestAnimationFrame(animate);
+}
+
+animate();
 </script>
 
 </body>
