--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-/* ===== RESET ===== */
 *{
   margin:0;
   padding:0;
@@ -16,7 +15,6 @@
   font-family:"Inter",sans-serif;
 }
 
-/* ===== BODY ===== */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
@@ -24,7 +22,7 @@ body{
   scroll-snap-type:y mandatory;
 }
 
-/* ===== NAV ===== */
+/* NAV */
 nav{
   position:fixed;
   top:0;
@@ -49,7 +47,7 @@ nav span{
   cursor:pointer;
 }
 
-/* ===== SECTIONS ===== */
+/* SECTIONS */
 .section{
   min-height:100vh;
   scroll-snap-align:start;
@@ -64,14 +62,14 @@ nav span{
   max-width:1100px;
 }
 
-/* ===== TITLES ===== */
+/* TITLES */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
 }
 
-/* ===== HERO ===== */
+/* HERO */
 .section.hero{
   align-items:center;
 }
@@ -87,7 +85,7 @@ h1{
   color:#777;
 }
 
-/* ===== TEXT ===== */
+/* TEXT */
 .section-block p{
   margin-top:12px;
   font-size:15px;
@@ -97,7 +95,7 @@ h1{
   text-align:justify;
 }
 
-/* ===== ABOUT ===== */
+/* ABOUT */
 .about{
   display:flex;
   gap:48px;
@@ -119,17 +117,6 @@ h1{
   padding-right:120px;
 }
 
-.portfolio-wrapper::after{
-  content:"";
-  position:absolute;
-  top:0;
-  right:0;
-  width:120px;
-  height:100%;
-  pointer-events:none;
-  background:linear-gradient(to right,rgba(10,10,10,0),rgba(10,10,10,1));
-}
-
 .portfolio-carousel{
   display:flex;
   gap:48px;
@@ -137,57 +124,6 @@ h1{
   padding-bottom:28px;
   scrollbar-width:auto;
   scrollbar-color:#aaa transparent;
-}
-
-.portfolio-carousel::-webkit-scrollbar{height:10px}
-.portfolio-carousel::-webkit-scrollbar-track{
-  background:rgba(255,255,255,.08);
-  border-radius:10px;
-}
-.portfolio-carousel::-webkit-scrollbar-thumb{
-  background:#aaa;
-  border-radius:10px;
-}
-.portfolio-carousel::-webkit-scrollbar-thumb:hover{
-  background:#fff;
-}
-
-.project-card{
-  min-width:540px;
-  text-decoration:none;
-  color:inherit;
-  opacity:0;
-  transform:translateY(12px);
-  transition:.8s ease;
-}
-
-.project-card.is-visible{
-  opacity:1;
-  transform:none;
-}
-
-.project-image{
-  height:310px;
-  margin-bottom:20px;
-  overflow:hidden;
-}
-
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
 }
 
 /* ===== CV ===== */
@@ -256,35 +192,12 @@ h1{
   color:#888;
 }
 
-/* ===== CONTACT ===== */
+/* CONTACT */
 .contact{
   margin-top:48px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
   gap:24px;
-}
-
-.contact a{
-  padding:28px;
-  border-radius:20px;
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  color:#fff;
-  text-decoration:none;
-  transition:.35s ease;
-}
-
-.contact a span{
-  display:block;
-  margin-top:8px;
-  font-size:12px;
-  letter-spacing:.18em;
-  text-transform:uppercase;
-  color:#888;
-}
-
-.contact a:hover{
-  transform:translateY(-4px);
 }
 </style>
 </head>
@@ -299,7 +212,6 @@ h1{
   <span data-i="4">Contacto</span>
 </nav>
 
-<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
     <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
@@ -307,68 +219,45 @@ h1{
   </div>
 </section>
 
-<!-- SOBRE MI -->
-<section class="section">
-  <div class="section-block">
-    <h1>Sobre mí</h1>
-    <div class="about">
-      <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de estudio hasta la materialización final.
-      </p>
-      <img src="foto.jpg" alt="">
-    </div>
-  </div>
-</section>
-
-<!-- PORTFOLIO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Portfolio</h1>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel" id="portfolioCarousel">
-
-        <a class="project-card">
-          <div class="project-image"><img src="1.jpg"></div>
-          <div class="project-inner"><h2>NODE</h2><span>Proyecto final de grado</span></div>
-        </a>
-
-        <a class="project-card">
-          <div class="project-image"><img src="2.jpg"></div>
-          <div class="project-inner"><h2>Sixay</h2><span>Diseño de mobiliario</span></div>
-        </a>
-
-        <a class="project-card">
-          <div class="project-image"><img src="3.jpg"></div>
-          <div class="project-inner"><h2>Exploración</h2><span>Proyecto experimental</span></div>
-        </a>
-
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CV -->
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
 
+      <!-- FORMACION -->
       <div class="timeline-item">
         <div class="timeline-card">
           <h3>Formación</h3>
-          <strong>UJI · UPV · Erasmus Londres</strong>
+          <strong>Universitat Jaume I</strong>
+          <span>Ingeniería en Diseño Industrial</span>
         </div>
       </div>
 
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <strong>Universitat Politècnica de València</strong>
+          <span>Ingeniería en Diseño Industrial</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <strong>Erasmus</strong>
+          <span>Londres</span>
+        </div>
+      </div>
+
+      <!-- EXPERIENCIA -->
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Experiencia</h3>
+          <strong>Sin experiencia profesional</strong>
+          <span>Disponibilidad para prácticas / primer empleo</span>
+        </div>
+      </div>
+
+      <!-- IDIOMAS -->
       <div class="timeline-item">
         <div class="timeline-card">
           <h3>Idiomas</h3>
@@ -376,6 +265,7 @@ h1{
         </div>
       </div>
 
+      <!-- SOFTWARE -->
       <div class="timeline-item">
         <div class="timeline-card">
           <h3>Software</h3>
@@ -388,31 +278,13 @@ h1{
   </div>
 </section>
 
-<!-- CONTACTO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Contacto</h1>
-    <div class="contact">
-      <a href="tel:+34600000000">+34 600 000 000<span>Teléfono</span></a>
-      <a href="mailto:luis@example.com">luis@example.com<span>Email</span></a>
-      <a href="#">LinkedIn<span>Perfil profesional</span></a>
-    </div>
-  </div>
-</section>
-
 <script>
-/* NAV */
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
-});
-
 /* OBSERVER */
 const observer=new IntersectionObserver(entries=>{
   entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
 },{threshold:.2});
 
-document.querySelectorAll(".project-card,.timeline-item")
+document.querySelectorAll(".timeline-item")
   .forEach(el=>observer.observe(el));
 
 /* TIMELINE LINE */
@@ -425,25 +297,6 @@ window.addEventListener("scroll",()=>{
   const h=Math.min(window.innerHeight-r.top,r.height);
   line.style.height=Math.max(0,h)+"px";
 });
-
-/* SCROLL HORIZONTAL SUAVE + CLAMP */
-const carousel=document.getElementById("portfolioCarousel");
-let current=0, target=0;
-const ease=0.08;
-
-carousel.addEventListener("wheel",e=>{
-  e.preventDefault();
-  const max=carousel.scrollWidth-carousel.clientWidth;
-  target+=e.deltaY*1.2;
-  target=Math.max(0,Math.min(target,max));
-},{passive:false});
-
-function animate(){
-  current+=(target-current)*ease;
-  carousel.scrollLeft=current;
-  requestAnimationFrame(animate);
-}
-animate();
 </script>
 
 </body>
